# google-cloud-storage-rs

./: Cargo.toml  build.rs
src/: bucket.rs  bucket_access_control.rs  client.rs  constants.rs  default_object_access_control.rs  encode.rs  error.rs  google.rs  headers.rs  hmac_key.rs  iam.rs  join_segment.rs  lib.rs  notifications.rs  object.rs  object_access_control.rs  paginate.rs  query.rs  request.rs  serde.rs  urls.rs
src/tests/: BingSiteAuth.xml  bucket_tests.rs  mod.rs  object_tests.rs  valid_bucket.json  valid_bucket_list.json  valid_objects_list.json
tests/: bucket.rs
tests/util/: mod.rs
